--- a/PetitionsClient/ClientApp/app/components/menu/menu.component.html
+++ b/PetitionsClient/ClientApp/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-﻿<div class="row header">
+﻿<div class="header">
     <div class="col-8 centered">
         <h3>
             <a class="nav-link mrg-top" [routerLink]="['/home']">
