--- a/PetitionsClient/ClientApp/app/components/home/home.component.css
+++ b/PetitionsClient/ClientApp/app/components/home/home.component.css
@@ -59,3 +59,29 @@
     border-color: lightgray;
     margin-bottom: 40px;
 }
+
+.card.border-secondary.mb-3 {
+    cursor: pointer;
+}
+
+@keyframes spinner {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.spinner:before {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    top: 92%;
+    left: 50%;
+    width: 30px;
+    height: 30px;
+    margin-top: -15px;
+    margin-left: -15px;
+    border-radius: 50%;
+    border: 1px solid #ccc;
+    border-top-color: #07d;
+    animation: spinner .6s linear infinite;
+}
