--- a/IdentityApp/Views/Account/ForgotPassword.cshtml
+++ b/IdentityApp/Views/Account/ForgotPassword.cshtml
@@ -1,22 +1,27 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Забули пароль?";
 }
 
 <h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="ForgotPassword" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+    <div class="col-md-4 glass">
+        <br />
+        <section>
+            <h4>Введіть, будь-ласка, ваш email.</h4>
+            <hr />
+
+            <form asp-action="ForgotPassword" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-default">Відправити</button>
+            </form>
+        </section>
+        <br />
     </div>
 </div>
 
