--- a/IdentityApp/wwwroot/css/site.css
+++ b/IdentityApp/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url('../images/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 /* Wrapping element */
@@ -8,6 +12,8 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    color: #e9e9e9;
+    min-height: calc(100vh - 70px);
 }
 
 /* Set widths on the form inputs since otherwise they're 100% wide */
@@ -81,4 +87,53 @@ textarea {
 }
 .page-consent .consent-form .consent-remember {
   padding-left: 16px;
+}
+
+.navbar.navbar-inverse.navbar-fixed-top {
+    background-color: black !important;
+}
+
+.navbar-header a:hover {
+    text-decoration: none;
+}
+
+.logo-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+}
+
+.logo-wrapper h4 {
+    margin: 20px 0 20px 20px;
+    color: #c0c0c0;
+}
+
+.logo-wrapper h4:hover {
+    color: #e9e9e9;
+}
+
+.logo {
+    height: 40px;
+    width: 90px;
+}
+
+.logo img {
+    width: 100%;
+    height: 100%;
+    margin: 5px;
+}
+
+.glass {
+    background-color: rgba(210, 110, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    /*width: 700px;
+    height: 300px;*/
+}
+
+.link a {
+    color: #e9e9e9;
 }
