Authorization view was customized

--- a/IdentityApp/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/IdentityApp/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Підтвердження зміни паролю";
 }
 
-<h2>@ViewData["Title"]</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+
+<div class="row">
+    <br />
+    <br />
+    <br />
+    <div class="col-md-4 glass">
+        <section>
+            <h2>@ViewData["Title"]</h2>
+            <p>Будь-ласка, перевірте ваш email для зміни паролю.</p>
+        </section>
+    </div>
+</div>
