--- a/IdentityApp/Views/Account/LoggedOut.cshtml
+++ b/IdentityApp/Views/Account/LoggedOut.cshtml
@@ -5,24 +5,28 @@
     ViewData["signed-out"] = true;
 }
 
-<div class="page-header logged-out">
-    <h1>
-        Logout
-        <small>You are now logged out</small>
-    </h1>
-
-    @if (Model.PostLogoutRedirectUri != null)
-    {
+<div class="row">
+    <br />
+    <br />
+    <br />
+    <div class="col-md-4 glass">
         <div>
-            Click <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">here</a> to return to the
-            <span>@Model.ClientName</span> application.
-        </div>
-    }
+            <h1>Вихід <small style="color: ghostwhite">Ви вийшли з системи</small></h1>            
 
-    @if (Model.SignOutIframeUrl != null)
-    {
-        <iframe width="0" height="0" class="signout" src="@Model.SignOutIframeUrl"></iframe>
-    }
+            @if (Model.PostLogoutRedirectUri != null)
+            {
+                <div>
+                    Натисніть <a class="PostLogoutRedirectUri" href="@Model.PostLogoutRedirectUri">сюди</a> щоб повернутись до
+                    @*<span>@Model.ClientName</span>*@ попереднього застосунку.
+                </div>
+            }
+
+            @if (Model.SignOutIframeUrl != null)
+            {
+                <iframe width="0" height="0" class="signout" src="@Model.SignOutIframeUrl"></iframe>
+            }
+        </div>
+    </div>
 </div>
 
 @section scripts
