--- a/IdentityApp/wwwroot/css/site.css
+++ b/IdentityApp/wwwroot/css/site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    background-image: url('../images/background.jpg');
+    background-image: url('../images/vinnitsa.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -124,16 +124,20 @@ textarea {
 }
 
 .glass {
-    background-color: rgba(210, 110, 0, 0.5);
+    /*background-color: rgba(210, 110, 0, 0.5);*/
+    background-color: rgba(0, 0, 0, 0.6);
+    /*background-color: rgba(255, 255, 255, 0.7);*/
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 8px;
-    /*width: 700px;
-    height: 300px;*/
 }
 
 .link a {
     color: #e9e9e9;
+}
+
+.text-danger {
+    color: red;
 }
