--- a/PetitionsClient/ClientApp/app/components/petition/petition-detail/petition-detail.component.css
+++ b/PetitionsClient/ClientApp/app/components/petition/petition-detail/petition-detail.component.css
@@ -28,3 +28,11 @@
     border-top-color: #07d;
     animation: spinner .6s linear infinite;
 }
+
+.progress {
+    height: 25px;
+}
+
+.badge-success {
+    height: 37px;
+}
