--- a/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.html
+++ b/PetitionsClient/ClientApp/app/components/category/register-category/register-category.component.html
@@ -11,7 +11,7 @@
                        class="form-control"
                        id="name"
                        name="name"
-                       placeholder='напр. "Транспорт та дороги"'>
+                       placeholder="Вкажіть назву категорії">
             </div>
             <div class="form-group">
                 <label for="description">Опис</label>
@@ -21,7 +21,7 @@
                           id="description"
                           name="description"
                           rows="3"
-                          placeholder='напр. "Звернення щодо змін, реконструкції, ввровадження транспортних мереж та шляхів сполучення, а також транспортних вузлів або терміналів, де здійснюється перевантаження вантажу чи пересадка пасажирів з одного виду транспорту на інший"'>
+                          placeholder="Коротка характеристика категорії">
             </textarea>
 
             </div>
