--- a/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.html
+++ b/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.html
@@ -58,7 +58,7 @@
                                 {{sCategory}}
                             </button>
                             <div *ngIf="categories.length">
-                                <ul *dropdownMenu class="dropdown-menu" role="menu">
+                                <ul *dropdownMenu class="dropdown-menu overflow" role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-item" (click)="selectCatagory('Всі')">Всі</a>
                                     </li>
