--- a/PetitionsClient/ClientApp/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/PetitionsClient/ClientApp/app/components/admin-dashboard/admin-dashboard.component.css
@@ -246,6 +246,12 @@ table.table .avatar {
     text-align: right;
 }
 
+.dropdown-menu.overflow {
+    overflow-y: scroll;
+    min-width: 180px;
+    max-height: 300px;
+}
+
 .dropdown-item {
     cursor: pointer;
 }
