--- a/PetitionsClient/ClientApp/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/PetitionsClient/ClientApp/app/components/admin-dashboard/admin-dashboard.component.html
@@ -7,7 +7,7 @@
 
         <div class="table-filter">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <div class="show-entries row align-items-end">
                         <label>Показати</label>
                         <div class="btn-group" dropdown>
@@ -22,13 +22,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <label>петицій</label>
                     </div>
                 </div>
-                <div class="col-sm-9">
+                <div class="col-sm-10">
                     <div class="filter-group row align-items-end">
                         <label>Пошук</label>
-                        <input type="text" class="form-control" [(ngModel)]="searchQuery">
+                        <input type="text" class="form-control search" [(ngModel)]="searchQuery">
                         <label>
                             <a class="view" tooltip="Пошук" (click)="search()">
                                 <fa-icon [icon]="faSearch" class="search-icon"></fa-icon>
@@ -38,11 +37,11 @@
                     <div class="filter-group  row align-items-end">
                         <label>Статус</label>
                         <div class="btn-group" dropdown>
-                            <button dropdownToggle type="button" class="btn btn-default dropdown-toggle" name="status">
+                            <button dropdownToggle type="button" class="btn btn-default dropdown-toggle status-filter" name="status">
                                 {{sStatus}}
                             </button>
                             <div>
-                                <ul *dropdownMenu class="dropdown-menu" role="menu">
+                                <ul *dropdownMenu class="dropdown-menu overflow" role="menu">
                                     <li role="menuitem">
                                         <a class="dropdown-item" (click)="selectStatus('Всі')">Всі</a>
                                     </li>
@@ -57,7 +56,7 @@
                     <div class="filter-group  row align-items-end">
                         <label>Категорія</label>
                         <div class="btn-group" dropdown>
-                            <button dropdownToggle type="button" class="btn btn-default dropdown-toggle" name="category">
+                            <button dropdownToggle type="button" class="btn btn-default dropdown-toggle category" name="category">
                                 {{sCategory}}
                             </button>
                             <div *ngIf="categories.length">
@@ -83,9 +82,8 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>Назва петиції</th>
+                    <th style="width: 300px">Назва петиції</th>
                     <th>Категорія</th>
-                    <th>Автор</th>
                     <th>Зареєстрована</th>
                     <th>Статус</th>
                     <th>Підтримано</th>
@@ -96,7 +94,6 @@
                 <tr *ngFor="let petition of shownPetitions; index as i">
                     <td>{{petition.name}}</td>
                     <td>{{petition.category.name}}</td>
-                    <td>{{petition.user.lastName}} {{petition.user.firstName[0]}}.{{petition.user.middleName[0]}}.</td>
                     <td><span class="font-size-sm">{{petition.created |  date:'yyyy-MM-dd'}}</span></td>
                     <td><span [ngStyle]="{'color':getStatusColor(petition.status)}">&#11044;&nbsp;&nbsp;</span>{{getStatusName(petition.status)}}</td>
                     <td><span class="font-size-sm">{{petition.voters.length}}/{{votesCount}}</span></td>
