--- a/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.css
+++ b/PetitionsClient/ClientApp/app/components/petition/all-petitions/all-petitions.component.css
@@ -278,3 +278,11 @@ table.table .avatar {
     border-top-color: #07d;
     animation: spinner .6s linear infinite;
 }
+
+.filter-group .btn.btn-default.dropdown-toggle.category {
+    width: 200px;
+}
+
+.filter-group .btn.btn-default.dropdown-toggle.status-filter {
+    width: 160px;
+}
